docs/v1.9.9.1/_sources/gallery/utils/index.rst.txt
:orphan:

Examples: Utility Functions
===========================

This folder contains examples demonstrating the various utility functions provided by the `PyOptik.utils` module.
These utilities are designed to facilitate common tasks such as managing directories, downloading necessary data, and creating custom material definitions.
The examples provided here aim to help you leverage these utilities effectively in your workflows.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to build a material library using the build_library function from...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_build_library_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_build_library.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Building database and Printing Materials</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a custom Sellmeier YAML file using the create_sellmeier...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_create_sellmeier_file_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_create_sellmeier_file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example: Create a Custom Sellmeier YAML File</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a custom YAML file containing tabulated nk data using t...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_create_tabulated_file_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_create_tabulated_file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example: Create a Custom Tabulated Data YAML File</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to download a YAML file from a URL using the download_yml_file fu...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_download_yml_file_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_download_yml_file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example: Download a YAML file</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/utils/build_library
   /gallery/utils/create_sellmeier_file
   /gallery/utils/create_tabulated_file
   /gallery/utils/download_yml_file



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
