docs/v2.0.2/_sources/gallery/utils/index.rst.txt
:orphan:

Examples: Utility Functions
===========================

This folder contains examples demonstrating the various utility functions provided by the `PyOptik.utils` module.
These utilities are designed to facilitate common tasks such as managing directories, downloading necessary data, and creating custom material definitions.
The examples provided here aim to help you leverage these utilities effectively in your workflows.



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a custom Sellmeier YAML file using the create_sellmeier...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_create_sellmeier_file_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_create_sellmeier_file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example: Create a Custom Sellmeier YAML File</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example demonstrates how to create a custom YAML file containing tabulated nk data using t...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_create_tabulated_file_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_create_tabulated_file.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Example: Create a Custom Tabulated Data YAML File</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to locate materials using patterns with search and then load a material ...">

.. only:: html

  .. image:: /gallery/utils/images/thumb/sphx_glr_search_materials_thumb.png
    :alt:

  :ref:`sphx_glr_gallery_utils_search_materials.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Searching the MaterialBank</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /gallery/utils/create_sellmeier_file
   /gallery/utils/create_tabulated_file
   /gallery/utils/search_materials



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
